Reverted changes to pom.xml